# data_note

./: .env.example  .gitignore  README.md  pyproject.toml
data_note/: __init__.py  assembly_candidate_filter.py  assembly_mode_detector.py  assembly_override_resolver.py  assembly_pair_selector.py  assembly_selection_resolver.py  assembly_version_checker.py  asset_images.py  auto_intro.py  bioproject_client.py  bold_portal_client.py  btk_images.py  calculate_metrics.py  chromosome_analyzer.py  cli.py  config.py  dna_extraction_audit.py  ensembl_annotation_fetcher.py  ensembl_annotation_locator.py  ensembl_endpoint_config.py  ensembl_graphql_client.py  fetch_bioproject_assemblies.py  fetch_biosample_info.py  fetch_btk_info.py  fetch_ensembl_info.py  fetch_extraction_data.py  fetch_gbif_info.py  fetch_jira_info.py  fetch_ncbi_data.py  fetch_server_data.py  formatting_utils.py  gbif_occurrence_client.py  gbif_taxonomy_client.py  grit_jira_auth.py  gtf_stats_parser.py  image_utils.py  io_utils.py  legacy_bioproject_assemblies.py  local_metadata.py  local_metadata_provider.py  (+22 more)
scripts/: collect_assembly_software_versions.py
tests/: README.md  test_annotation_quality_workflow_service.py  test_annotation_service.py  test_asg_tables.py  test_assembly_models.py  test_assembly_service.py  test_assembly_services.py  test_assembly_workflow_service.py  test_asset_images.py  test_author_service.py  test_auto_intro.py  test_base_note_info.py  test_bioproject_components.py  test_bold_portal_client.py  test_bold_result_service.py  test_btk_images.py  test_calculate_metrics.py  (+48 more)
(+62 files in other folders)
